# cookiecutter-django-package

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json
.devcontainer/: devcontainer.json
.devcontainer/scripts/: post-create.sh
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.devcontainer/scripts/: post-create.sh
{{cookiecutter.project_slug}}/requirements/: requirements.in
{{cookiecutter.project_slug}}/sandbox/: manage.py
{{cookiecutter.project_slug}}/sandbox/config/: settings.py  urls.py
{{cookiecutter.project_slug}}/sandbox/tests/e2e/: .gitignore  README.md  cypress.config.js
{{cookiecutter.project_slug}}/sandbox/tests/e2e/cypress/support/: commands.js  e2e.js
{{cookiecutter.project_slug}}/sandbox/tests/e2e/specs/: smoke.cy.js
